fix overlap

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -3,4 +3,5 @@
   padding: 100px;
   width: 100%;
   height: 100%;
+  transition: transform 0.5s ease;
 }
